Remove profiler code